Basic client architecture

--- a/views/canvas/fb.ejs
+++ b/views/canvas/fb.ejs
@@ -5,7 +5,7 @@
 
     <meta name="fb-app-id" content="<%= config.fb.appId %>">
 
-    <style>
+    <!-- /*<style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
       form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
@@ -14,18 +14,18 @@
       #messages { list-style-type: none; margin: 0; padding: 0; }
       #messages li { padding: 5px 10px; }
       #messages li:nth-child(odd) { background: #eee; }
-    </style>
+    </style>*/ -->
     <!-- <link rel="stylesheet" href="/stylesheets/main.css" media="screen" charset="utf-8"> -->
   </head>
   <body>
-    <!-- <div id="game-wrapper">
-      <div id="game"></div>
-    </div> -->
+    <div id="app-wrapper">
+      <div id="app"></div>
+    </div>
 
-    <ul id="messages"></ul>
+    <!-- <ul id="messages"></ul>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
+    </form> -->
 
     <!-- Javascript files -->
     <script src="/scripts/application.js" charset="utf-8"></script>
