--- a/views/canvas/fb.ejs
+++ b/views/canvas/fb.ejs
@@ -4,28 +4,11 @@
     <title>Remik Game</title>
 
     <meta name="fb-app-id" content="<%= config.fb.appId %>">
-
-    <!-- /*<style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
-    </style>*/ -->
-    <!-- <link rel="stylesheet" href="/stylesheets/main.css" media="screen" charset="utf-8"> -->
   </head>
   <body>
-    <div id="app-wrapper">
-      <div id="app"></div>
+    <div class="application-wrapper">
+      <div id="application"></div>
     </div>
-
-    <!-- <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
-    </form> -->
 
     <!-- Javascript files -->
     <script src="/scripts/application.js" charset="utf-8"></script>
