--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -23,46 +23,7 @@ a {
     margin: 0 auto;
   }
 
-  /**
-   * LOBBY
-   */
-  .lobby {
-    display: flex;
-    height: 500px;
-
-    main {
-      display: flex;
-      flex: 1;
-    }
-
-    aside {
-      display: flex;
-      flex: none;
-      flex-direction: column;
-      flex-wrap: wrap;
-      width: 250px;
-      height: 100%;
-    }
-  }
-
-  .userList {
-    background-color: yellow;
-    flex: 1;
-    padding: 10px;
-    box-sizing: border-box;
-  }
-
-  .roomList {
-    background-color: blue;
-    flex: 1;
-    padding: 10px;
-    box-sizing: border-box;
-
-    a, a:hover, a:focus, a:visited {
-      color: black;
-      font-weight: bold;
-    }
-  }
+  @import 'lobby';
 
   /**
    * PLAY
@@ -84,54 +45,18 @@ a {
       width: 250px;
       height: 100%;
     }
-  }
 
-  /**
-   * CHAT
-   */
-  .chat {
-    background-color: #ff0;
-    flex: none;
-    height: 60%;
-    display: flex;
-
-    .content {
+    .userList {
+      background-color: yellow;
       flex: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      width: 100%
-    }
+      padding: 10px;
+      box-sizing: border-box;
 
-    .messageList {
-      width: 100%;
-      height: 100%;
-      margin: 0;
-      padding: 0;
       overflow-y: auto;
       overflow-x: hidden;
-
-      li {
-        list-style: none;
-        padding-left: 0.2rem;
-        padding-right: 0.2rem;
-      }
-    }
-
-    .messageComposer {
-      flex: none;
-      height: 2.1em;
-      display: flex;
-
-      textarea {
-        flex: 1;
-      }
-
-      button {
-        flex: none;
-      }
     }
   }
 
+  @import 'chat';
 
 }
