Add and fix stuff (sorry)

--- a/client/styles/_lobby.scss
+++ b/client/styles/_lobby.scss
@@ -21,6 +21,9 @@
     flex: 1;
     padding: 10px;
     box-sizing: border-box;
+
+    overflow-y: auto;
+    overflow-x: hidden;
   }
 
   .roomList {
