--- a/client/styles/cards.scss
+++ b/client/styles/cards.scss
@@ -2,11 +2,25 @@
   .entity.table-card-wrapper {
     width: 62px;
     height: 86px;
-    position: absolute;
+    position: relative;
+    margin-right: 10px;
 
     & > .playing-card {
       width: 62px;
       height: 86px;
+    }
+
+    &.pile-highlight {
+      box-shadow: 0px 0px 15px 2px rgba(29,29,135,0.75);
+      cursor: pointer;
+    }
+
+    & > span {
+      color: white;
+      background-color: rgba(0,0,0,0.5);
+      padding: 2px;
+      position: absolute;
+      bottom: 0; left: 0;
     }
   }
 
@@ -19,17 +33,6 @@
     & > .playing-card {
       width: 100px;
       height: 140px;
-    }
-  }
-
-  .entity.table-card-wrapper:hover,
-  .entity.table-card-wrapper:focus,
-  .entity.table-card-wrapper.focus {
-    top: -15px;
-    height: 101px;
-
-    & > .playing-card {
-      // box-shadow: 1px 1px 60px #70a;
     }
   }
 
