--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -72,6 +72,7 @@ a {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-content: flex-start;
     margin: 1em;
     padding: 1em;
     border: 3px solid black;
